Tambah fragment layanan

--- a/app/src/main/res/layout/layanan_list_item.xml
+++ b/app/src/main/res/layout/layanan_list_item.xml
@@ -23,7 +23,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imgViewJadwal"
+                android:id="@+id/imgViewLayanan"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
@@ -36,20 +36,11 @@
                 android:id="@+id/txtNamaLayanan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="TextView"
-                app:layout_constraintStart_toEndOf="@+id/imgViewJadwal"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/txtHariJadwal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
-                app:layout_constraintStart_toStartOf="@+id/txtNamaLayanan"
-                app:layout_constraintTop_toBottomOf="@+id/txtNamaLayanan" />
+                app:layout_constraintStart_toEndOf="@+id/imgViewLayanan"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btnDetailLayanan"
@@ -61,6 +52,7 @@
                 android:text="detail"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
