--- a/app/src/main/res/layout/fragment_jadwal_praktik_detail.xml
+++ b/app/src/main/res/layout/fragment_jadwal_praktik_detail.xml
@@ -33,7 +33,7 @@
             app:hintEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgViewJadwalDetail">
+            app:layout_constraintTop_toBottomOf="@+id/imgViewLayananDetail">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtIdJadwalDetail"
